<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.screens.register.RegisterFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_rectangle_black_corners"
        android:elevation="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivRegisterImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:layout_constraintWidth_percent="0.8" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_rectangle_black_corners"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="17sp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/ivRegisterImage"
        app:layout_constraintStart_toStartOf="@+id/ivRegisterImage"
        app:layout_constraintTop_toBottomOf="@+id/ivRegisterImage" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAge"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_rectangle_black_corners"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:maxLength="2"
        android:padding="17sp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etWeight"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_rectangle_black_corners"
        android:hint="@string/enter_weight"
        android:inputType="number"
        android:maxLength="3"
        android:padding="17sp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/etHeight"
        app:layout_constraintStart_toEndOf="@+id/etAge"
        app:layout_constraintTop_toTopOf="@+id/etAge" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUserName"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_rectangle_black_corners"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:padding="17sp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/etHeight"
        app:layout_constraintStart_toEndOf="@+id/etAge"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etHeight"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_rectangle_black_corners"
        android:hint="@string/enter_height"
        android:inputType="number"
        android:maxLength="3"
        android:padding="17sp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintTop_toTopOf="@+id/etWeight" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:layout_marginTop="15dp"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/etHeight"
        app:layout_constraintStart_toStartOf="@+id/etAge"
        app:layout_constraintTop_toBottomOf="@+id/etWeight"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_black_corners"
            android:drawablePadding="13dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="17sp"
            android:textSize="15sp"
            app:hintTextColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:layout_marginTop="15dp"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_black_corners"
            android:drawablePadding="13dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="17sp"
            android:textSize="15sp"
            app:hintTextColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/black_rounded_rectangle"
        android:backgroundTint="@color/mint"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordLayout" />


    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loading"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>