<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.profile.ProfileFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_rectangle_black_corners"
        android:elevation="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivProfileLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/mint"
        android:padding="40dp"
        android:src="@drawable/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.73" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_width="295dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:elevation="5dp"
        android:enabled="false"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="@+id/heightInputLayout"
        app:layout_constraintStart_toStartOf="@+id/ageInputLayout"
        app:layout_constraintTop_toTopOf="@+id/cardView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:maxLength="25"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="360dp"
        android:layout_height="220dp"
        android:elevation="5dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfileLogo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ageInputLayout"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:elevation="5dp"
        android:layout_marginBottom="15dp"
        android:enabled="false"
        android:hint="@string/age"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:importantForAccessibility="yes"
            android:inputType="number"
            android:maxLength="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightInputLayout"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:elevation="5dp"
        android:enabled="false"
        android:hint="@string/weight"
        app:layout_constraintBottom_toBottomOf="@+id/ageInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/heightInputLayout"
        app:layout_constraintStart_toEndOf="@+id/ageInputLayout"
        app:layout_constraintTop_toTopOf="@+id/ageInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:importantForAccessibility="yes"
            android:inputType="number"
            android:maxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightInputLayout"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:elevation="5dp"
        android:enabled="false"
        android:hint="@string/height"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/weightInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:importantForAccessibility="yes"
            android:inputType="number"
            android:maxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEdit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/black_rounded_rectangle"
        android:text="@string/edit"
        android:backgroundTint="@color/mint"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonChangeLanguage"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/black_rounded_rectangle"
        android:backgroundTint="@color/mint"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textStyle="bold"
        android:text="@string/change_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLogOut"
        app:layout_constraintTop_toTopOf="@+id/btnLogOut" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_rectangle_black_corners"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_rectangle_black_corners"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:visibility="gone"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogOut"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/black_rounded_rectangle"
        android:backgroundTint="@color/bright_red"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/buttonChangeLanguage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loading"
        android:elevation="6dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>